test/Fail/Issue.1947.agda
-- Andreas, 2016-06-02
-- The filename "Issue.1947.agda" is invalid as "1947" is not a valid name.

module _ where
