test/Fail/Issue.1947.err
Issue.1947.agda:1.1-1: error: [InvalidFileName]
The file name Issue.1947.agda is
invalid because it does not correspond to a valid module name.
